fix: Editors don't align vertically on small screens
Also, remove twitter logo.

--- a/main.css
+++ b/main.css
@@ -52,15 +52,17 @@ a {
   flex: 1;
   width: 100%;
   padding: 5px;
-  min-height: 0px;
+  height: 0px;
+  flex-wrap: wrap;
+  flex-direction: row;
 }
 
 .editor {
   display: flex;
   flex-direction: column;
-  flex: 1 0;
+  flex: 1 1 0;
   margin: 5px;
-  min-width: 0px;
+  min-width: 300px;
 }
 
 .editor-button-panel {
